prevent jump to top before scroll animate

--- a/src/style.scss
+++ b/src/style.scss
@@ -166,7 +166,7 @@ section {
 	margin: 0 0 3rem 0;
 }
 h5.section-title {
-	padding: 0 0 1rem 0;
+	padding: 1rem 0;
 }
 .section-copy {
 	padding: 0 0 2.5rem 0;
